--- a/carousel/carousel.css
+++ b/carousel/carousel.css
@@ -24,15 +24,18 @@ blockquote,
 th,
 td {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 fieldset,
 img {
-  border: 0; }
+  border: 0;
+}
 
 /*
 	TODO think about hanlding inheritence differently, maybe letting IE6 fail a bit...
@@ -47,15 +50,18 @@ strong,
 th,
 var {
   font-style: normal;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 ol,
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 caption,
 th {
-  text-align: left; }
+  text-align: left;
+}
 
 h1,
 h2,
@@ -64,23 +70,28 @@ h4,
 h5,
 h6 {
   font-size: 100%;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 q:before,
 q:after {
-  content: ''; }
+  content: '';
+}
 
 abbr,
 acronym {
   border: 0;
-  font-variant: normal; }
+  font-variant: normal;
+}
 
 /* to preserve line-height and selector appearance */
 sup {
-  vertical-align: text-top; }
+  vertical-align: text-top;
+}
 
 sub {
-  vertical-align: text-bottom; }
+  vertical-align: text-bottom;
+}
 
 input,
 textarea,
@@ -89,33 +100,42 @@ select {
   font-size: inherit;
   font-weight: inherit;
   *font-size: 100%;
-  /*to enable resizing for IE*/ }
+  /*to enable resizing for IE*/
+}
 
 /* start own stylesheet */
 .poster-main {
   position: relative;
   width: 800px;
-  height: 270px; }
-  .poster-main .poster-list {
-    width: 800px;
-    height: 270px; }
-    .poster-main .poster-list .poster-item {
-      position: absolute;
-      left: 0;
-      top: 0; }
-      .poster-main .poster-list .poster-item img {
-        display: block; }
-  .poster-main .poster-btn {
-    position: absolute;
-    top: 0;
-    width: 100px;
-    height: 270px;
-    z-index: 100; }
-  .poster-main .poster-prev-btn {
-    left: 0;
-    background: url("./icon/prev.png") no-repeat center center; }
-  .poster-main .poster-next-btn {
-    right: 0;
-    background: url("./icon/next.png") no-repeat center center; }
+  height: 270px;
+}
+.poster-main .poster-list {
+  width: 800px;
+  height: 270px;
+}
+.poster-main .poster-list .poster-item {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.poster-main .poster-list .poster-item img {
+  display: block;
+  width: 100%;
+}
+.poster-main .poster-btn {
+  position: absolute;
+  top: 0;
+  width: 100px;
+  height: 270px;
+  z-index: 100;
+}
+.poster-main .poster-prev-btn {
+  left: 0;
+  background: url("./icon/prev.png") no-repeat center center;
+}
+.poster-main .poster-next-btn {
+  right: 0;
+  background: url("./icon/next.png") no-repeat center center;
+}
 
 /*# sourceMappingURL=carousel.css.map */
